<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    android:background="@drawable/fondolog"
    tools:context=".Login">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@drawable/custom_edittext">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Login"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/purple"></TextView>
            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/custom_edittext"
                android:drawableLeft="@drawable/usuario"
                android:drawablePadding="8dp"
                android:hint="@string/usuario"
                android:textColor="@color/black"
                android:padding="8dp"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="40dp"/>
            <EditText
                android:id="@+id/password"
                android:hint="@string/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/custom_edittext"
                android:drawableLeft="@drawable/bloquear"
                android:drawablePadding="8dp"
                android:textColor="@color/black"
                android:padding="8dp"
                android:inputType="textPassword"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="20dp"/>
            <Button
                android:id="@+id/btn_Login"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/btnIniciar"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/purple"
                app:cornerRadius="20dp"
                />
            <Button
                android:id="@+id/btnRegistrarLog"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/btnRegistrar"
                android:textSize="18sp"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/purple"
                app:cornerRadius="20dp"
                />
        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar2"
        android:visibility="gone"></ProgressBar>

    <TextView
        android:id="@+id/txtinvitado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invitado"
        android:padding="6dp"
        android:textSize="14sp"
        android:textAlignment="center"
        android:textColor="@color/black"></TextView>

</LinearLayout>