<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    android:background="@drawable/fondo2"
    tools:context=".MenuOpciones"
    >
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@drawable/custom_edittext">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Menú de Opciones"
                android:textAlignment="center"
                android:textColor="@color/purple"
                android:textSize="36sp"
                android:textStyle="bold"></TextView>

            <Button
                android:id="@+id/btnReportar"
                android:text="@string/reportar"
                android:drawableLeft="@drawable/ireporte"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/purple"
                app:cornerRadius="20dp"
                />
            <Button
                android:id="@+id/btnLlamar"
                android:text="@string/llamar"
                android:drawableLeft="@drawable/illamar"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textSize="18sp"
                android:layout_marginTop="1dp"
                android:backgroundTint="@color/purple"
                app:cornerRadius="20dp"/>

            <Button
                android:id="@+id/btnInforme"
                android:text="@string/informe"
                android:drawableLeft="@drawable/iinforme"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textSize="18sp"
                android:layout_marginTop="1dp"
                android:backgroundTint="@color/purple"
                app:cornerRadius="20dp"/>
            <Button
                android:id="@+id/btnPreguntas"
                android:text="@string/preguntas"
                android:drawableLeft="@drawable/ipreguntas"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textSize="18sp"
                android:layout_marginTop="1dp"
                android:backgroundTint="@color/purple"
                app:cornerRadius="20dp"/>
            <Button
                android:id="@+id/btnRecomendaciones"
                android:text="@string/recomendaciones"
                android:drawableLeft="@drawable/irecoomendaciones"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textSize="18sp"
                android:layout_marginTop="1dp"
                android:backgroundTint="@color/purple"
                app:cornerRadius="20dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnRegresarLogin"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10sp"
        android:backgroundTint="@color/purple"
        android:hint="Regresar"
        android:textColor="@color/black" />
</LinearLayout>