<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MenuLlamada"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    android:background="@drawable/fondo2">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@drawable/custom_edittext">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Menú de Opciones"
                android:textColor="@color/purple"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                ></TextView>
            <Button
                android:id="@+id/btnBomberos"
                android:drawableLeft="@drawable/ibomberos"
                android:text="Bomberos"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/purple"
                app:cornerRadius="20dp"
                />
            <Button
                android:id="@+id/btnPolicia"
                android:text="@string/policia"
                android:drawableLeft="@drawable/ipolicia"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textSize="18sp"
                android:layout_marginTop="1dp"
                android:backgroundTint="@color/purple"
                app:cornerRadius="20dp"/>
            <Button
                android:id="@+id/btnAmbulancia"
                android:text="@string/ambulancia"
                android:drawableLeft="@drawable/iambulancia"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textSize="18sp"
                android:layout_marginTop="1dp"
                android:backgroundTint="@color/purple"
                app:cornerRadius="20dp"/>
            <Button
                android:id="@+id/btnCruzRoja"
                android:text="@string/cruz"
                android:drawableLeft="@drawable/icruzroja"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textSize="18sp"
                android:layout_marginTop="1dp"
                android:backgroundTint="@color/purple"
                app:cornerRadius="20dp"/>
            <Button
                android:id="@+id/btnSerenazgo"
                android:text="@string/serenazgo"
                android:drawableLeft="@drawable/iserenazgo"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textSize="18sp"
                android:layout_marginTop="1dp"
                android:backgroundTint="@color/purple"
                app:cornerRadius="20dp"/>
            <Button
                android:id="@+id/btnDesastres"
                android:text="@string/desastres"
                android:drawableLeft="@drawable/idesastres"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textSize="18sp"
                android:layout_marginTop="1dp"
                android:backgroundTint="@color/purple"
                app:cornerRadius="20dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <Button
        android:layout_marginTop="10sp"
        android:id="@+id/btnRegresarMenuOpciones"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="Regresar"
        android:backgroundTint="@color/purple"
        android:layout_gravity="center"
        android:textColor="@color/black"/>
</LinearLayout>