<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".Reporte"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    android:background="@drawable/fondolog">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@drawable/custom_edittext">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:padding="24dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Registrar Reporte"
                    android:textSize="36sp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@color/purple"
                    ></TextView>
                <Button
                    android:id="@+id/btnRegistrarUbicacion"
                    android:text="@string/btnubi"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:textSize="14sp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/corners"
                    android:textColor="@color/white"/>
                <EditText
                    android:id="@+id/edtnombre"
                    android:hint="Nombre"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/custom_edittext"
                    android:drawablePadding="8dp"
                    android:textColor="@color/black"
                    android:padding="8dp"
                    android:textColorHighlight="@color/cardview_dark_background"
                    android:layout_marginTop="5dp"/>
                <EditText
                    android:id="@+id/edtpellidos"
                    android:hint="Apellidos"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/custom_edittext"
                    android:drawablePadding="8dp"
                    android:textColor="@color/black"
                    android:padding="8dp"
                    android:textColorHighlight="@color/cardview_dark_background"
                    android:layout_marginTop="5dp"/>
                <EditText
                    android:id="@+id/edttelefono"
                    android:hint="@string/telefono"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/custom_edittext"
                    android:drawablePadding="8dp"
                    android:textColor="@color/black"
                    android:padding="8dp"
                    android:textColorHighlight="@color/cardview_dark_background"
                    android:layout_marginTop="5dp"/>
                <EditText
                    android:id="@+id/edtdescripcion"
                    android:hint="@string/descripcion"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/custom_edittext"
                    android:drawablePadding="8dp"
                    android:textColor="@color/black"
                    android:padding="8dp"
                    android:textColorHighlight="@color/cardview_dark_background"
                    android:layout_marginTop="5dp"/>
                <TextView
                    android:id="@+id/txtLat"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/custom_edittext"
                    android:drawablePadding="8dp"
                    android:textColor="@color/black"
                    android:padding="8dp"
                    android:textColorHighlight="@color/cardview_dark_background"
                    android:layout_marginTop="5dp"/>
                <TextView
                    android:id="@+id/txtLong"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/custom_edittext"
                    android:drawablePadding="8dp"
                    android:textColor="@color/black"
                    android:padding="8dp"
                    android:textColorHighlight="@color/cardview_dark_background"
                    android:layout_marginTop="5dp"/>
                <Button
                    android:id="@+id/btnAceptar"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:text="Guardar"
                    android:textSize="14sp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/corners"
                    android:textColor="@color/white"/>
                <Button
                    android:id="@+id/btnSalirMenu"
                    android:text="Regresar Menú"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:textSize="14sp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/corners"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </ScrollView>


    </androidx.cardview.widget.CardView>

</LinearLayout>